--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.6",
+    "firebase": "^9.20.0",
     "next": "13.3.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.1"
   }
 }
